# tpcc-mysql

./: .gitignore  CMakeLists.txt  create_table.sql  load.sh  readme.md
scripts/: memlock.c  parse_trx.py  run.sh  tpcc.py
src/: CMakeLists.txt  load.c  main.c
